Installation
***********************************************
See INSTALL file for details

Changelog
***********************************************
Version 0.112
	core:
		New:
			- Added Sidebar Urls for Run and IconSettings file dialogs;
			- Wine Dlls path autodetections; (If not work on your system -- plz mail to me ;) )
		Fixed:
			- Added FreeBSD port patches by Dmitry Marakasov aka amdmi3;
			- Fixed q4wine.desktop GENERIC names;
			- Fixed IconSettings path detections (ProgramPath\WorkDirPath e.t.c.);
			- Fixed .exe adding to IconName on Prgoram file	select;
			- Run and IconSettings now are modal dialogs;
			- Fixed LC_ALL and LS_MESSAGES locale detection;
			- Winetriks executable now puts into $HOME/.config/q4inwe/ directory;
			- No sudo neaded for Winetriks download and install;

Version 0.111
	core:
		New:
			- New q4wine icons with different sizes;
			- Updated q4wine.desktop;
			- Make install now install q4wine.desktop and icons;
			- Added basic shortcuts;
			- q4wine now save and restore size and position of main window;
	core:
		Fixed:
			- Fixed icoutils icon export bugs;
			- Fixed file name case sence on icon exort;
			- Added .exe or .dll file selection masks on icon export;
			- Fixed start selection file path on icon export;
			- FreeBSD: kvm functions now do not need kmem gid;
			- FreeBSD: wine_pthread now resolve exec name;
			- Updated About dialog;
			- Updated Ukrainian and Russian locales;

Version 0.110
	core:
		New:
			- FreeBSD full support (proc and mounts);
			- nrg images mount (Linux only);
			- new core functions class (will be moved to libq4wine shared library);
			- updated Ukrainian and Russian locales;
			- basic wis xml parser class;
			- Added nice level field to Run dialog;
			- Added descktop size to Run dialog;

		Fixed:
			- Winetriks prefix fixes;
			- FreeBSD kmem read exception check;
			- Can't delete image from ImageManager;
			- Table view and resize;
			- Fixed getWineDll at Run dialog;